# KickOS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  M1_raw_meas.md  M1_state.md  M3_raw_meas.md  README.md  TODO.md  roadmap.md
arch/: CMakeLists.txt
arch/arm/armv6m/: arch_armv6m.cc  regs.h  switch.S
arch/arm/armv6m/include/kickos/arch/: context.h
arch/arm/armv7m/: arch_armv7m.cc  cache.cc  regs.h  switch.S
arch/arm/armv7m/include/kickos/arch/: context.h
arch/arm/chip/imxrt1062/: chip_imxrt1062.cc  imxrt1062.ld  mpu.cmake  startup.S
arch/arm/chip/imxrt1062/include/kickos/: board_config.h
arch/arm/chip/mk64f/: caps.cmake  chip_mk64f.cc  mk64f.ld  startup.S
arch/arm/chip/mk64f/class/: dspi_class.cc  dspi_class.h
arch/arm/chip/mk64f/include/kickos/: board_config.h
arch/arm/chip/mps2/: chip_mps2.cc  mps2.ld  startup.S
arch/arm/chip/mps2/include/kickos/: board_config.h
arch/arm/chip/nrf51/: caps.cmake  chip_nrf51.cc  nrf51.ld  startup.S
arch/arm/chip/nrf51/include/kickos/: board_config.h
arch/arm/chip/rp2040/: boot2.S  boot2.ld  caps.cmake  chip_rp2040.cc  rp2040.ld  startup.S
arch/arm/chip/rp2040/include/kickos/: board_config.h
arch/arm/chip/rp2350/: caps.cmake  chip_rp2350.cc  mpu.cmake  rp2350.ld  startup.S
arch/arm/chip/rp2350/include/kickos/: board_config.h
arch/arm/chip/sam3x8e/: chip_sam3x8e.cc  sam3x8e.ld  startup.S
arch/arm/chip/sam3x8e/include/kickos/: board_config.h
arch/arm/chip/stm32f103/: chip_stm32f103.cc  startup.S  stm32f103.ld
arch/arm/chip/stm32f103/include/kickos/: board_config.h
arch/arm/chip/stm32f302/: chip_stm32f302.cc  startup.S  stm32f302.ld
arch/arm/chip/stm32f302/include/kickos/: board_config.h
arch/arm/chip/stm32f411/: chip_stm32f411.cc  startup.S  stm32f411.ld
arch/arm/chip/xmc4800/: caps.cmake  chip_xmc4800.cc  startup.S  usic.cc  usic.h  usic_uart.cc  xmc4800.ld
arch/arm/chip/xmc4800/class/: usic_class.cc  usic_class.h
arch/arm/chip/xmc4800/include/kickos/: board_config.h
arch/arm/common/: arch_arm_common.cc  arch_arm_pmsav8.cc  mpu.h  regs.h  regs_v8m.h
arch/common/: arch_ram_common.cc  startup_ranges.cc
arch/include/kickos/arch/: arch.h  clk_q32.h
arch/riscv/chip/esp32c6/: caps.cmake  chip_esp32c6.cc  esp32c6.ld  startup.S
arch/riscv/chip/esp32c6/class/: gpio_class.cc  gpio_class.h
arch/riscv/chip/virt/: chip_virt.cc  startup.S  virt.ld
arch/riscv/rv32imac/: arch_rv32imac.cc  switch.S
arch/riscv/rv32imac/include/kickos/arch/: context.h  rv_trap_ids.h
arch/rx/chip/rx72m/: caps.cmake  chip_rx72m.cc  mpu.cmake  rx72m.ld  startup.S
arch/rx/chip/rx72m/class/: port_class.cc  port_class.h
arch/rx/rxv3/: arch_rxv3.cc  regs.h  switch.S
arch/rx/rxv3/include/kickos/arch/: context.h
arch/sim/: sim.cc  start.cc
arch/sim/include/kickos/arch/: context.h
arch/xtensa/chip/esp32/: chip_esp32.cc  esp32.ld  startup.S
arch/xtensa/lx6/: arch_xtensa.cc  switch.S
arch/xtensa/lx6/include/kickos/arch/: context.h  xtensa_frame.h
cmake/: KickOSConfig.cmake.in  build_stamp.cmake  kickos.cmake  rp2040_checksum.py  toolchain-arm-none-eabi.cmake  toolchain-host.cmake  toolchain-riscv-none-elf.cmake  toolchain-rx-elf.cmake  toolchain-xtensa-esp32-elf.cmake
docs/: README.md  SPDX-header-template.txt  architecture.md  boards.md  console.md  (+32 more)
examples/freedom-slave/: CMakeLists.txt  main.cc  spi_transport.cc  spi_transport.h
examples/oot-app/: CMakeLists.txt  main.cc
kernel/: CMakeLists.txt
kernel/bench/: bench.cc
kernel/domain/: domain.cc
kernel/grant/: grant.cc
kernel/include/kickos/: cap.h  config.h  domain.h  endpoint.h  grant.h  instance.h  irq.h  irqlock.h  kernel.h  ktrace.h  list.h  sched.h  slotpool.h  sync.h  thread.h  time.h
kernel/include/kickos/config/: board.h  limits.h  system.h
kernel/init/: console.cc  console_tx.cc  instance.cc  kmain.cc  led.cc
kernel/irq/: irq.cc
kernel/ktrace/: ktrace.cc
kernel/sched/: policy_fifo_rr.cc  sched.cc
kernel/sync/: sync.cc
kernel/syscall/: cap.cc  syscall.cc
kernel/thread/: thread.cc
kernel/time/: clock_select.cc  time.cc
lib/: CMakeLists.txt  rtt.cc
lib/include/kickos/: console_tx.h  rtt.h
lib/include/kickos/libc/: fmt.h  string.h
lib/libc/: fmt.cc  string.cc
system/: CMakeLists.txt
system/include/kickos/sys/: cap_index.h  errno.h  init.h
system/init/: default_init_entry.cc  default_init_run.cc
tests/telemetry/: CMakeLists.txt  check_flood.py  check_golden.py  check_qemu.py  check_run.py  gen_golden.cc
user/: CMakeLists.txt
user/apps/: CMakeLists.txt
user/apps/bench/: CMakeLists.txt  main.cc
user/apps/blink/: CMakeLists.txt  main.cc
user/apps/c6blink/: CMakeLists.txt  main.cc
user/apps/clockretune/: CMakeLists.txt  main.cc
user/apps/clocksoak/: CMakeLists.txt  main.cc
user/apps/consoledemo/: CMakeLists.txt  main.cc
user/apps/cxxtest/: CMakeLists.txt  main.cc
user/apps/f411spi/: CMakeLists.txt  main.cc
user/apps/fault/: CMakeLists.txt  main.cc
user/apps/fp_switch/: CMakeLists.txt  main.cc
user/apps/hello/: CMakeLists.txt  main.cc
user/apps/hello_c/: CMakeLists.txt  main.cc
user/apps/initdemo/: CMakeLists.txt  main.cc
user/apps/k64drv/: CMakeLists.txt  main.cc
user/apps/k64dspi/: CMakeLists.txt  main.cc  spi_transport.cc  spi_transport.h
user/apps/kickcat_slave/: CMakeLists.txt  main.cc
user/apps/mpu_fault/: CMakeLists.txt  main.cc
user/apps/rxdrv/: CMakeLists.txt  main.cc
user/apps/sched_exit/: CMakeLists.txt  main.cc
user/apps/selftest/: CMakeLists.txt  main.cc
user/apps/specfault/: CMakeLists.txt  main.cc
user/apps/stress/: CMakeLists.txt  main.cc
user/apps/tele_flood/: CMakeLists.txt  main.cc
user/apps/tele_pingpong/: CMakeLists.txt  main.cc
user/apps/xmcspi/: CMakeLists.txt  main.cc
user/driver/: CMakeLists.txt
user/driver/k64dspi/: CMakeLists.txt  k64dspi.cc
user/driver/xmcuart/: CMakeLists.txt  xmcuart.cc
user/include/kickos/: app.h  kos.h  kos.hpp  sys.h
user/include/kickos/driver/: k64dspi.h  xmcuart.h
user/include/kickos/sys/: abi.h  cap_index.h  errno.h
user/src/: newlib_stubs.cc  syscall_stubs.cc
(+92 files in other folders)
